# eagleye_lib

./: .gitignore  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE.bazel  eagleye.repos
.github/workflows/: build.yml  codeql.yml
eagleye_core/coordinate/: CMakeLists.txt
eagleye_core/coordinate/ext/: angles.h
eagleye_core/coordinate/include/coordinate/: coordinate.hpp
eagleye_core/coordinate/src/: convertheight.cpp  coordinate.cpp  enu2xyz_vel.cpp  ll2xy_mgrs.cpp
eagleye_core/navigation/: CMakeLists.txt
eagleye_core/navigation/include/navigation/: angular_velocity_offset_stop.hpp  navigation.hpp  tf.hpp
eagleye_core/navigation/src/: distance.cpp  heading.cpp  heading_interpolate.cpp  height.cpp  position.cpp  position_interpolate.cpp  rolling.cpp  rtk_dead_reckoning.cpp  slip_angle.cpp  slip_coefficient.cpp  trajectory.cpp  velocity_estimator.cpp  velocity_scale_factor.cpp  yaw_rate_offset.cpp  yaw_rate_offset_stop.cpp
eagleye_util/fix2pose/launch/: fix2pose.launch
eagleye_util/fix2pose/src/: fix2pose.cpp
eagleye_util/gnss_converter/src/: gnss_converter_node.cpp
lib/include/: localization.hpp
lib/src/: localization.cpp
test/: test.cpp
